fix(material/menu): truncate long words in option label
In the MDC implementation of the menu, we allow text wrapping to occur which is why we don't have an `overflow: hidden`. However, there are some cases where the text can still be too long and cause an overflow. These changes add some CSS to handle them.

Fixes #26807.

--- a/src/material/menu/menu.scss
+++ b/src/material/menu/menu.scss
@@ -124,6 +124,9 @@ mat-menu {
   // leak in from the list and cause the text to truncate.
   .mdc-list-item__primary-text {
     white-space: normal;
+
+    // In case the label is one long string that doesn't break into multiple lines.
+    word-break: break-word;
   }
 
   &.mat-mdc-menu-item-submenu-trigger {
